# agent-friend-showcase

./: .agent-friend-showcase-snapshot  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SHOWCASE-SCAN-REPORT.md  pyproject.toml
agent/: README.md  pyproject.toml
agent/src/agent/: __init__.py  conversation.py  conversation_events.py  errors.py  fallbacks.py  latency.py  memory_feed.py  messages.py  paths.py  prompts.py
agent/src/agent/context/: __init__.py  budget.py  fifo.py  naive.py  protocol.py  summarizing.py  summary_prompt.py
agent/src/agent/personas/: README.md  __init__.py  catalog.py  default.md  frontmatter.py  identity.py
agent/src/agent/prompt_sections/: README.md  __init__.py  channel_voice.md  persona_switch_strategy.md  project_identity.md  runtime_context.md
agent/src/agent/runtime/: __init__.py  hooks.py  inbox.py  listeners.py  sources.py
agent/src/agent/sessions/: __init__.py  errors.py  events.py  manager.py  session.py  store.py
agent/src/agent/system_prompt/: __init__.py  composer.py  defaults.py  sections.py
agent/src/agent/tools/: __init__.py  errors.py  factory.py  protocol.py  registry.py
agent/src/agent/tools/builtin/: __init__.py
agent/src/agent/tools/builtin/conversation_history/: __init__.py  render.py  time_parser.py  tool.py
agent/src/agent/tools/builtin/web_search/: __init__.py  tool.py
agent/src/agent/tools/builtin/web_search/providers/: __init__.py  tavily.py
agent/tests/: test_channel.py  test_context_assembly.py  test_context_budget.py  test_context_fifo.py  test_context_summarizing.py  test_context_unified_entry.py  test_conversation_dispatch_system_turn.py  test_conversation_edit_resend.py  test_conversation_history_render.py  test_conversation_history_time_parser.py  test_conversation_history_tool.py  test_conversation_tool_hook.py  test_memory_feed.py  test_paths.py  test_runtime_dispatch.py  test_runtime_hooks.py  test_runtime_inbox.py  test_runtime_observe_migration.py  test_runtime_silent_turn.py  test_runtime_sources.py  test_system_prompt_composer.py  test_system_prompt_integration.py  test_tool_calling_integration.py  test_tool_factory.py  test_web_search_tool.py
agent_bridge/: pyproject.toml
agent_bridge/src/agent_bridge/: __init__.py  __main__.py  agent_runtime_factory.py  app.py  assembly.py  errors.py  session_bridge.py  settings.py
agent_bridge/src/agent_bridge/dev/: __init__.py  fire_source.py  push_subscribe.py  recall_buffer.py
agent_bridge/src/agent_bridge/protocols/: __init__.py
agent_bridge/src/agent_bridge/protocols/ag_ui/: __init__.py  decoders.py  encoders.py  routes.py
agent_bridge/src/agent_bridge/protocols/im/: __init__.py  content.py  credentials.py  event.py  onboard.py  provider.py  router.py  routes.py  runtime.py
agent_bridge/src/agent_bridge/protocols/im/adapters/: __init__.py  qq.py
agent_bridge/src/agent_bridge/protocols/openai/: __init__.py  decoders.py  encoders.py  routes.py
agent_bridge/src/agent_bridge/push/: __init__.py  protocol.py
agent_bridge/src/agent_bridge/routes/: __init__.py  memory.py  meta.py
agent_bridge/tests/: test_assembly.py  test_configure_logging.py  test_dev_endpoint.py  test_im_credentials.py  test_im_qq_adapter.py  test_im_router.py  test_im_routes.py  test_im_runtime_onboard.py  test_meta_channel_routes.py  test_openai_routes.py  test_push_channel.py  test_push_mirror.py  test_recall_buffer.py  test_routes_memory.py  test_settings.py
frontend/: bubble.html  chat.html  components.json  eslint.config.js  (+9 more)
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: bubble_window.rs  lib.rs  log_paths.rs  paths.rs  push_subscriber.rs  settings.rs  ui_state.rs
llm_providers/: README.md  pyproject.toml
llm_providers/src/llm_providers/: __init__.py  client.py  errors.py  spec.py  stream_events.py
llm_providers/tests/: test_context_window_and_usage.py
memory/: README.md  pyproject.toml
memory/src/memory/: __init__.py  contracts.py  facade.py  factory.py
memory/src/memory/extraction/: __init__.py  extractor.py  reconciler.py  result.py  worker.py
memory/src/memory/extraction/prompts/: extract.md  extract_legacy.md
memory/src/memory/retrieval/: __init__.py  pinned_gate.py  renderer.py  scoring.py  strategy.py
memory/src/memory/store/: __init__.py  schema.py  sqlite_store.py
memory/tests/: test_extraction.py  test_extractor_pass1.py  test_facade.py  test_factory_switches.py  test_logger_added.py  test_pinned_gate.py  test_retrieval.py  test_store.py
memory_eval/: README.md  pyproject.toml
memory_eval/src/memory_eval/: __init__.py  __main__.py
memory_eval/src/memory_eval/adapters/: __init__.py  memory_adapter.py
memory_eval/src/memory_eval/datasets/: __init__.py  case.py  locomo.py  perltqa.py
memory_eval/src/memory_eval/harness/: __init__.py  baseline.py  judge.py  report.py  runner.py
memory_eval/tests/: test_adapter.py  test_anchor_judge.py  test_baseline.py  test_locomo.py  test_perltqa.py
tools/: README.md  pyproject.toml
tools/src/tools/: __init__.py
tools/src/tools/cli/: __init__.py  __main__.py  bridge_client.py
voice_bridge/: pyproject.toml
voice_bridge/smoke/: README.md  index.html
voice_bridge/src/voice_bridge/: __init__.py  __main__.py  app.py  assembly.py  errors.py  latency.py  settings.py
voice_bridge/src/voice_bridge/asr/: __init__.py  provider.py  types.py  volc.py
voice_bridge/src/voice_bridge/calls/: __init__.py  registry.py
voice_bridge/src/voice_bridge/clients/: __init__.py  agent_bridge.py
voice_bridge/src/voice_bridge/routes/: __init__.py  control.py  llm_proxy.py  transcription.py
voice_bridge/src/voice_bridge/rtc/: __init__.py  openapi.py  scenes.py  token.py
voice_bridge/tests/integration/: test_acceptance_criteria.py
voice_bridge/tests/unit/: test_calls_registry.py  test_cors.py  test_errors.py  test_latency.py  test_rtc_openapi_sign.py  test_rtc_scenes.py  test_rtc_token.py  test_transcription_route.py  test_voice_configure_logging.py  test_voice_settings.py  test_volc_asr.py
(+306 files in other folders)
