[project]
name = "agent-friend"
version = "0.1.0"
description = "一个虚拟朋友定位的 AI 项目"
requires-python = ">=3.12,<3.13"
# 顶层依赖所有 workspace 成员，让 uv sync 自动 editable-install 它们
dependencies = [
    "agent",
    "agent-bridge",
    "memory",
    "memory-eval",
    "llm-providers",
    "tools",
    "voice-bridge",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "respx>=0.23.1",
]

[tool.uv.workspace]
members = [
    "agent",
    "agent_bridge",
    "memory",
    "memory_eval",
    "llm_providers",
    "tools",
    "voice_bridge",
]

[tool.uv.sources]
agent = { workspace = true }
agent-bridge = { workspace = true }
memory = { workspace = true }
memory-eval = { workspace = true }
llm-providers = { workspace = true }
tools = { workspace = true }
voice-bridge = { workspace = true }

# ============================================================
# Ruff 共享配置（所有 workspace 成员继承）
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "frontend",
    "client",
    "**/.venv",
    "**/build",
    "**/dist",
    ".claude/worktrees",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line-too-long（由 formatter 处理）
    "RUF001", # 字符串中的全角字符警告（项目使用中文，正常）
    "RUF002", # docstring 中的全角字符警告（项目使用中文，正常）
    "RUF003", # 注释中的全角字符警告（项目使用中文，正常）
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================
# Mypy 共享配置
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
exclude = [
    "frontend",
    "client",
    "build",
    "dist",
    ".claude/worktrees",
]

# ============================================================
# Pytest 共享配置
# ============================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["agent", "agent_bridge", "memory", "memory_eval", "llm_providers", "tools", "voice_bridge"]
