[project]
name = "agent"
version = "0.1.0"
description = "agent-friend · Agent 引擎（对话编排、prompt 管理、tool calling）"
requires-python = ">=3.12,<3.13"
dependencies = [
    "memory",
    "llm-providers",
    "PyYAML>=6.0",
    "tavily-python>=0.7.24",
    "portalocker>=3.2.0",
    "platformdirs>=4.0.0",
]

[tool.uv.sources]
memory = { workspace = true }
llm-providers = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
