[project]
name = "agent-bridge"
version = "0.1.0"
description = "agent-friend · 把 agent.Conversation 通过双协议（OpenAI / AG-UI）的 HTTP SSE 网络服务对外暴露"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agent",
    "llm-providers",
    "memory",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "ag-ui-protocol>=0.1.18",
    # 022 · IM 通道接入 · 首条 QQ adapter 用的 SDK
    "qqbot-agent-sdk[qrcode]>=1.2.2",
    # 022 · 凭据本地加密(AES-GCM);cryptography 通常已是传递依赖,显式 pin 让 sbom 可见
    "cryptography>=42",
]

[tool.uv.sources]
agent = { workspace = true }
llm-providers = { workspace = true }
memory = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_bridge"]
exclude = [
    # 014：dev 子包仅供开发期使用（dev CLI + dev fire-source 端点），
    # **不**入 wheel 打包产物；开发期 `uv run python -m agent_bridge.dev.xxx`
    # 仍能跑（直接读 source tree）。
    "src/agent_bridge/dev",
]
