[project]
name = "llm-providers"
version = "0.1.0"
description = "agent-friend · LLM Provider 适配层（基于 LiteLLM）"
requires-python = ">=3.12,<3.13"
dependencies = [
    "litellm>=1.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_providers"]
