[project]
name = "memory"
version = "0.1.0"
description = "agent-friend · 记忆系统（基于 SQLite，向量栈预备）"
requires-python = ">=3.12,<3.13"
dependencies = [
    "llm-providers",
    "jieba>=0.42.1",
]

[tool.uv.sources]
llm-providers = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory"]
