[project]
name = "memory-eval"
version = "0.1.0"
description = "agent-friend · memory 召回质量评测（PoC，基于 LoCoMo）"
requires-python = ">=3.12,<3.13"
dependencies = [
    "memory",
    "llm-providers",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[tool.uv.sources]
memory = { workspace = true }
llm-providers = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_eval"]
