[project]
name = "tools"
version = "0.1.0"
description = "agent-friend · 开发/调试/评估工具集合"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agent",
    "memory",
    "llm-providers",
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.50",
    "rich>=13.9.0",
    "httpx>=0.28.1",
]

[tool.uv.sources]
agent = { workspace = true }
memory = { workspace = true }
llm-providers = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tools"]
